--- a/themes/countrycrafts/layouts/default.htm
+++ b/themes/countrycrafts/layouts/default.htm
@@ -26,7 +26,7 @@ description = "Default layout"
 <!--TODO: Add Flash message later-->
 
 <!-- Content -->
-<main id="layout-content" class="flex flex-col flex-grow w-11/12 mx-auto my-5">
+<main id="layout-content" class="flex flex-col flex-grow my-5">
     {% page %}
 </main>
 
