--- a/themes/countrycrafts/assets/output.css
+++ b/themes/countrycrafts/assets/output.css
@@ -829,6 +829,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .place-items-center {
   place-items: center;
 }
@@ -847,6 +851,10 @@ video {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -970,19 +978,9 @@ video {
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
-.bg-purple-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 33 168 / var(--tw-bg-opacity));
-}
-
 .bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .bg-red-900 {
@@ -1005,8 +1003,23 @@ video {
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
 }
 
+.bg-teal-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
+}
+
 .bg-white\/20 {
   background-color: rgb(255 255 255 / 0.2);
+}
+
+.bg-mom-navy {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 51 96 / var(--tw-bg-opacity));
+}
+
+.bg-mom-pink {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 121 155 / var(--tw-bg-opacity));
 }
 
 .bg-home-hero-pattern {
@@ -1314,6 +1327,21 @@ video {
   .\32xl\:w-8\/12 {
     width: 66.666667%;
   }
+}
+
+.\[\&\>\*\:nth-child\(2n\)\]\:bg-mom-navy>*:nth-child(2n) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 51 96 / var(--tw-bg-opacity));
+}
+
+.\[\&\>\*\:nth-child\(3n\)\]\:bg-red-800>*:nth-child(3n) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
+
+.\[\&\>\*\:nth-child\(3n\)\]\:bg-mom-red>*:nth-child(3n) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(155 38 44 / var(--tw-bg-opacity));
 }
 
 .\[\&\>\*\:nth-child\(even\)\]\:bg-red-700>*:nth-child(even) {
