--- a/themes/countrycrafts/partials/cards/hori-card.htm
+++ b/themes/countrycrafts/partials/cards/hori-card.htm
@@ -10,7 +10,7 @@
     </div>
     {% endif %}
     {% if img %}
-    <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-80 rounded-2xl absolute -left-8 bottom-20 z-20">
+    <img src="{{ img }}" alt="handcrafted" class="w-auto h-80 rounded-2xl absolute -left-8 bottom-20 z-20">
     {% endif %}
     <div class="flex flex-row justify-end w-full">
         <div class="flex flex-col justify-end w-5/12 py-8 pr-8">
