--- a/themes/countrycrafts/partials/cards/vert-card.htm
+++ b/themes/countrycrafts/partials/cards/vert-card.htm
@@ -1,12 +1,14 @@
-<article class="flex justify-between {{ bgColor }} rounded-2xl w-60 h-[40rem] relative">
-    <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-72 rounded-2xl absolute -right-8 -top-8 z-20">
+<article class="flex justify-between {{ bgColor }} rounded-2xl w-60 h-[40rem] relative my-16">
+    <img src="{{ img }}" alt="handcrafted" class="w-auto h-72 rounded-2xl absolute -right-8 -top-8 z-20">
     <div class="p-8 absolute bottom-0">
         <h1 class="text-5xl text-mom-yellow font-dancing">{{title}}</h1>
         <p class="text-xl text-white font-architects mt-3">
             {{text}}
         </p>
         <div class="flex flex-row justify-end">
-            <a class="text-3xl text-mom-yellow font-dancing" href="#">Purchase</a>
+            {% if link %}
+                <a class="text-3xl text-mom-yellow font-dancing" href="/store/item/{{link[1]}}">Purchase</a>
+            {% endif %}
         </div>
     </div>
 </article>
