--- a/themes/countrycrafts/assets/output.css
+++ b/themes/countrycrafts/assets/output.css
@@ -574,8 +574,8 @@ video {
   left: -2rem;
 }
 
-.-right-8 {
-  right: -2rem;
+.-right-4 {
+  right: -1rem;
 }
 
 .-top-10 {
@@ -725,8 +725,8 @@ video {
   height: 40rem;
 }
 
-.h-\[52em\] {
-  height: 52em;
+.h-\[66em\] {
+  height: 66em;
 }
 
 .h-auto {
@@ -743,10 +743,6 @@ video {
 
 .w-11\/12 {
   width: 91.666667%;
-}
-
-.w-3\/12 {
-  width: 25%;
 }
 
 .w-32 {
@@ -847,10 +843,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .justify-evenly {
@@ -962,6 +954,16 @@ video {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
+.bg-mom-navy {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 51 96 / var(--tw-bg-opacity));
+}
+
+.bg-mom-orange {
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 134 46 / var(--tw-bg-opacity));
+}
+
 .bg-mom-red {
   --tw-bg-opacity: 1;
   background-color: rgb(155 38 44 / var(--tw-bg-opacity));
@@ -970,11 +972,6 @@ video {
 .bg-mom-teal {
   --tw-bg-opacity: 1;
   background-color: rgb(50 131 125 / var(--tw-bg-opacity));
-}
-
-.bg-orange-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
 .bg-red-900 {
@@ -999,16 +996,6 @@ video {
 
 .bg-white\/20 {
   background-color: rgb(255 255 255 / 0.2);
-}
-
-.bg-mom-orange {
-  --tw-bg-opacity: 1;
-  background-color: rgb(228 134 46 / var(--tw-bg-opacity));
-}
-
-.bg-mom-navy {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 51 96 / var(--tw-bg-opacity));
 }
 
 .bg-home-hero-pattern {
@@ -1146,16 +1133,6 @@ video {
   line-height: 1;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1246,26 +1223,6 @@ video {
   padding: 0.5rem;
 }
 
-.first\:bg-mom-teal:first-child {
-  --tw-bg-opacity: 1;
-  background-color: rgb(50 131 125 / var(--tw-bg-opacity));
-}
-
-.last\:bg-mom-pink:last-child {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 121 155 / var(--tw-bg-opacity));
-}
-
-.odd\:bg-mom-navy:nth-child(odd) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 51 96 / var(--tw-bg-opacity));
-}
-
-.odd\:bg-mom-teal:nth-child(odd) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(50 131 125 / var(--tw-bg-opacity));
-}
-
 .hover\:fill-yellow-500:hover {
   fill: #eab308;
 }
@@ -1300,6 +1257,15 @@ video {
 }
 
 @media (min-width: 1280px) {
+  .xl\:-right-8 {
+    right: -2rem;
+  }
+
+  .xl\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .xl\:my-0 {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -1317,14 +1283,52 @@ video {
     height: 18rem;
   }
 
+  .xl\:h-\[52em\] {
+    height: 52em;
+  }
+
+  .xl\:w-3\/12 {
+    width: 25%;
+  }
+
+  .xl\:w-8\/12 {
+    width: 66.666667%;
+  }
+
   .xl\:w-9\/12 {
     width: 75%;
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:justify-between {
+    justify-content: space-between;
+  }
+
+  .xl\:justify-around {
+    justify-content: space-around;
   }
 
   .xl\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  }
+
+  .xl\:p-8 {
+    padding: 2rem;
+  }
+
+  .xl\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .xl\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
 }
 
@@ -1338,22 +1342,7 @@ video {
   }
 }
 
-.\[\&\>\*\:first\]\:bg-mom-teal>*:first {
-  --tw-bg-opacity: 1;
-  background-color: rgb(50 131 125 / var(--tw-bg-opacity));
-}
-
 .\[\&\>\*\:nth-child\(1\)\]\:bg-mom-teal>*:nth-child(1) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(50 131 125 / var(--tw-bg-opacity));
-}
-
-.\[\&\>\*\:nth-child\(1n\)\]\:bg-mom-navy>*:nth-child(1n) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 51 96 / var(--tw-bg-opacity));
-}
-
-.\[\&\>\*\:nth-child\(1n\)\]\:bg-mom-teal>*:nth-child(1n) {
   --tw-bg-opacity: 1;
   background-color: rgb(50 131 125 / var(--tw-bg-opacity));
 }
@@ -1363,14 +1352,14 @@ video {
   background-color: rgb(43 51 96 / var(--tw-bg-opacity));
 }
 
-.\[\&\>\*\:nth-child\(3n\)\]\:bg-mom-red>*:nth-child(3n) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(155 38 44 / var(--tw-bg-opacity));
-}
-
 .\[\&\>\*\:nth-child\(3n\)\]\:bg-mom-pink>*:nth-child(3n) {
   --tw-bg-opacity: 1;
   background-color: rgb(230 121 155 / var(--tw-bg-opacity));
+}
+
+.\[\&\>\*\:nth-child\(3n\)\]\:bg-mom-red>*:nth-child(3n) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(155 38 44 / var(--tw-bg-opacity));
 }
 
 .\[\&\>\*\:nth-child\(even\)\]\:bg-red-700>*:nth-child(even) {
